# Passm

./: .gitignore  CNAME  Cargo.toml  index.html
assets/: index-Cj0JNYB0.css  index-DiPkNdMQ.js
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx  LandingPage.tsx
frontend/src/components/: DownloadSection.tsx  TerminalView.tsx
src/: cli.rs  encryption.rs  main.rs  manager.rs
