[package]
name = "passm"
version = "1.0.0"
authors = ["Chandresh Kumar <kchandresh726@gmail.com>"]
edition = "2021"
description = "A CLI password manager"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rpassword = "5.0"
argon2 = "0.4"
rand = "0.8"
ring = "0.16.20"
base64 = "0.21.0"
chacha20poly1305 = "0.10"
colored = "2.1.0"
dialoguer = "0.11.0"
dirs = "4.0"
dotenv = "0.15"